# WSD25_Assign02

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .sync-exclude.lst  Dockerfile  GUIDELINES.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  openapi.json  openapi.yaml  postman.json  postman_collection.json  pyproject.toml  pytest.ini  test_db.sqlite
.github/workflows/: docker-publish.yml  test.yml
alembic/: env.py  script.py.mako
scripts/: auth_smoke.py  cover_repro.py  data.csv  debug_cover.py  generate_postman.py  print_routes.py  run_tests.py  seed.py
src/app/: __init__.py  config.py  constants.py  logging.yaml  main.py  metrics.py  redis_client.py
src/app/api/: auth_router.py  authors.py  authors_extra.py  books.py  books_extra.py  comment_likes.py  comments.py  comments_extra.py  likes.py  orders.py  orders_extra.py  reviews.py  reviews_extra.py  users.py  users_extra.py
src/app/db/: __init__.py  base.py  models.py
src/app/middleware/: logging_middleware.py
src/app/response/: api_response.py  json_error.py
src/app/schemas/: auth.py  pagination.py
src/app/security/: __init__.py  dependencies.py  jwt.py  password.py
src/app/storage/: __init__.py  base.py  db_storage.py  fs_storage.py
src/fne/: __init__.py  config.py  main.py
src/fne/api/: authors.py  books.py  comments.py  likes.py  orders.py  reviews.py  users.py
src/fne/db/: base.py  models.py
src/fne/storage/: __init__.py  db_storage.py  fs_storage.py
src/wsd_assignment02_project.egg-info/: SOURCES.txt  requires.txt  tmplps3yalv  top_level.txt
tests/: conftest.py  run_quick.py  test_additional_coverage.py  test_admin_creation.py  test_api_more.py  test_auth.py  test_auth_extra.py  test_auth_logout.py  test_auth_negative.py  test_authors.py  test_blob_storage.py  test_books.py  test_books_extra.py  test_edge_cases.py  test_flow_more.py  test_health.py  test_metrics.py  test_negative_paths.py  test_pagination_metadata.py  test_password_pepper.py  test_redis_instrumentation.py  test_redis_stub.py  test_register.py  test_reviews_comments_likes_orders.py  test_storage.py  test_user_type_field.py  test_users.py  test_users_additional.py
