[project]
name = "wsd_assignment02_project"
version = "0.1.0"
description = "Async FastAPI project scaffold for Assignment 2"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy",
    "aiomysql",
    "redis",
    "python-jose",
    "passlib[bcrypt]",
    "python-dotenv",
    "pydantic[email]",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
]
#[project.dependencies]
#fastapi = "^0.95.0"
#uvicorn = {extras = ["standard"], version = "^0.22.0"}
#SQLAlchemy = "^2.0.0"
#aiomysql = "^1.1.0"
#redis = "^4.5.0"
#python-jose = "^3.3.0"
#passlib = {extras=["bcrypt"], version="^1.8.0"}
#python-dotenv = "^1.0.0"
#pydantic = "^2.6.0"


[project.optional-dependencies]
dev = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

